@@ -1,14 +1,19 @@
 package com.fiveguys.fivelogbackend.domain.blog.board.service;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class TrendingBoardService {
     private final RedisTemplate<String, String> redisTemplate;
     private static final String TRENDING_BOARD_KEY = "trending:boards";
@@ -18,6 +23,7 @@ public class TrendingBoardService {
     }
 
     public List<Long> getTopTrendingBoards(int limit) {
+
         Set<String> boardIds = redisTemplate.opsForZSet()
                 .reverseRange(TRENDING_BOARD_KEY, 0, limit - 1);
 
@@ -25,6 +31,8 @@ public class TrendingBoardService {
 
         return boardIds.stream()
                 .map(Long::parseLong)
-                .toList();
+                .collect(Collectors.toList());
+
+
     }
 }
